# ftshop

./: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
api/: pyproject.toml
api/src/euro_chess_studio/: config.py  deps.py  main.py
api/src/euro_chess_studio/actions/: adaptation.py  errors.py  export.py  game.py  games.py  jobs.py  model_turn.py  moves.py  presenter.py  scenario.py  workspaces.py
api/src/euro_chess_studio/calculations/: adaptation.py  audio.py  comparison.py  dataset.py  evals.py  export.py  game_clock.py  generation.py  ids.py  llm_prompts.py  model_catalog.py  move_vocab.py  pages.py  reward.py  snippets.py  video.py
api/src/euro_chess_studio/chess/: board.py
api/src/euro_chess_studio/data/: adaptation_fixtures.py  adapters_repo.py  artifacts_repo.py  assets_store.py  benchmark_runs_repo.py  canvas_store.py  dataset_rows_repo.py  dataset_snapshots_repo.py  db.py  eval_results_repo.py  eval_suites_repo.py  fal_client.py  games_repo.py  generated_store.py  job_configs_repo.py  llm_client.py  model_attempts_repo.py  moves_repo.py  pages_repo.py  presenter_state_repo.py  reset_db.py  run_locks_repo.py  scenario_repo.py  seed.py  users_repo.py  workspaces_repo.py
api/src/euro_chess_studio/jobs/: adaptation_handlers.py  audio_runner.py  base.py  cloud_runner.py  fal_runner.py  local_audio.py  local_handlers.py  local_runner.py  metric_persistence.py  registry.py  replay_runner.py
api/src/euro_chess_studio/routes/: adaptation.py  artifacts.py  canvas.py  client_host.py  datasets.py  evals.py  game.py  generation.py  jobs.py  moves.py  pages.py  presenter.py  users.py  workspaces.py
api/src/euro_chess_studio/tools/: __init__.py  load_sim.py  make_media.py  mock_llm.py
api/tests/: test_cached_media_availability.py  test_main.py  test_model_reference_guard.py
api/tests/actions/: test_adaptation_actions.py  test_export_actions.py  test_game_actions.py  test_games_actions.py  test_jobs_actions.py  test_model_turn_actions.py  test_moves_actions.py  test_presenter_actions.py  test_scenario_actions.py  test_workspaces_actions.py
api/tests/calculations/: test_adaptation.py  test_audio.py  test_comparison.py  test_dataset.py  test_evals.py  test_export.py  test_game_clock.py  test_generation.py  test_ids.py  test_llm_prompts.py  test_move_vocab.py  test_reward.py  test_video.py
api/tests/chess/: test_board.py
api/tests/data/: test_adapters_repo.py  test_artifacts_repo.py  test_assets_store.py  test_canvas_store.py  test_dataset_rows_repo.py  test_db.py  test_eval_results_repo.py  test_job_configs_repo.py  test_llm_client.py  test_migration.py  test_moves_repo.py  test_pages_repo.py  test_presenter_state_repo.py  test_users_repo.py  test_workspaces_repo.py
api/tests/jobs/: test_adaptation_handlers.py  test_audio_runner.py  test_fal_runner.py  test_local_runner.py  test_registry.py  test_replay_runner.py
api/tests/routes/: test_adaptation_routes.py  test_artifacts_routes.py  test_canvas_routes.py  test_datasets_routes.py  test_evals_routes.py  test_games_routes.py  test_jobs_routes.py  test_moves_routes.py  test_presenter_routes.py  test_workspaces_routes.py
api/tests/tools/: test_load_sim.py
training/: pyproject.toml
training/src/chess_adapt/: __init__.py  cli.py
training/src/chess_adapt/actions/: pipeline.py  training.py
training/src/chess_adapt/calculations/: __init__.py  dataset.py  training.py
training/src/chess_adapt/data/: __init__.py  lichess.py  store.py
training/tests/: test_cli.py
training/tests/actions/: test_pipeline.py  test_publish.py
training/tests/calculations/: test_dataset.py  test_training.py
training/tests/data/: test_store.py
tui/: pyproject.toml
tui/screenshots/: failure-48x24.txt  failure-48x26-tall.txt  game-40x22.txt  game-48x24-tall.txt  game-48x24.txt  game-48x32-tall.txt  game-60x28-tall.txt  game-60x28.txt  game-80x24.txt  gemma-opens-48x24.txt  gemma-opens-48x26-tall.txt  gemma-opens-48x32-tall.txt  history-48x24.txt  home-48x24.txt  no-legal-move-48x24.txt  no-legal-move-48x26-tall.txt  replay-48x24.txt  replay-48x26-tall.txt
tui/src/chess_tui/: __init__.py  __main__.py  cli.py
tui/src/chess_tui/actions/: game.py  replay.py
tui/src/chess_tui/calculations/: board_view.py  commands.py  moves.py  prompt.py  replies.py  (+1 more)
tui/tests/: conftest.py  test_app_loop.py  test_board_view.py  test_commands.py  test_config.py  test_game_actions.py  test_input_line.py  test_model_turn.py  test_moves.py  test_prompt.py  test_replay.py  test_replies.py  test_repos_roundtrip.py  test_screens.py  test_stats.py
(+278 files in other folders)
