[project]
name = "euro-chess-studio"
version = "0.1.0"
description = "Backend for the EuroSciPy 2026 chess fine-tuning workshop studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.50",
    "python-chess>=1.999",
    "pydantic>=2.13",
    "python-multipart>=0.0.32",
    "httpx>=0.28",
]

[project.optional-dependencies]
# Local text-to-audio inference (musicgen-small, stable-audio-open-1.0).
# Several GB of wheels and model downloads; install via `just install-audio`.
audio = [
    "torch>=2.6",
    "transformers>=5.0",
    "diffusers>=0.35",
    "scipy>=1.14",
    "soundfile>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "httpx>=0.28",
    "ruff>=0.15",
    "ty>=0.0.56",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/euro_chess_studio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI's Depends(...) is idiomatic as a default argument

[tool.pytest.ini_options]
testpaths = ["tests"]
