[project]
name = "chess-tui"
version = "0.1.0"
description = "Phone-first chess TUI against a local llama.cpp Gemma for the EuroSciPy 2026 workshop"
requires-python = ">=3.11"
# Everything here is pure Python on purpose: Termux installs must never
# compile a wheel. Do not add FastAPI, Jupyter, torch, audio, web, or
# deck dependencies to this project.
dependencies = [
    "python-chess>=1.999",
    "httpx>=0.28",
    "rich>=13.9",
]

[project.scripts]
chess-tui = "chess_tui.cli:main"

[dependency-groups]
# Desktop-only tooling. The phone path installs with plain pip, which
# never resolves dependency groups.
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
    "ty>=0.0.56",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_tui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
